# Menu

./: .cirrus.yml  .gitignore  CMakeLists.txt  README.md
.github/workflows/: auto-format.yml
Shutdown/: CMakeLists.txt  Shutdown_de_DE.ts  mainwindow.ui
plugin-battery/: batterywidget.cpp  plugin.h
plugin-datetime/: CMakeLists.txt  datetime.cpp  datetimewidget.cpp  datetimewidget.h
plugin-statusnotifier/: CMakeLists.txt  dbustypes.h  sniasync.cpp  sniasync.h  statusnotifier.cpp  statusnotifierbutton.cpp  statusnotifierbutton.h  statusnotifieriteminterface.cpp  statusnotifieriteminterface.h  statusnotifierwatcher.cpp  statusnotifierwatcher.h  statusnotifierwidget.cpp  statusnotifierwidget.h
plugin-volume/: CMakeLists.txt  controlwidget.cpp  plugin.h  volumewidget.cpp
plugin-windows/: CMakeLists.txt  windows.cpp  windows.h  windowswidget.cpp  windowswidget.h
src/: CMakeLists.txt  applicationinfo.cpp  applicationinfo.h  applicationwindow.cpp  applicationwindow.h  appmenuwidget.cpp  appmenuwidget.cpp.save  appmenuwidget.h  blurwindow.cpp  extensionwidget.cpp  lineediteventfilter.h  main.cpp  mainpanel.cpp  mainpanel.h  mainwidget.cpp  mainwidget.h  mainwindow.cpp  mainwindow.h  menuqcalc.h  pluginmanager.cpp  popupwindow.cpp  thumbnails.cpp  thumbnails.h
src/actionsearch/: actionsearch.cpp
src/appmenu/: appmenumodel.cpp  appmenumodel.h  dbusmenuimporter.cpp  menufilterproxy.cpp  menufilterproxy.h  menuimporter.cpp  menuimporter.h  menuimporteradaptor.cpp  menuimporteradaptor.h  qmenuview.cpp  qmenuview.h  qmenuview_p.h  utils.cpp
src/translations/: menubar_cs.ts  menubar_da.ts  menubar_de.ts  menubar_el.ts  menubar_en.ts  menubar_eo.ts  menubar_es.ts  menubar_fr.ts  menubar_he.ts  menubar_hu.ts  menubar_it.ts  menubar_ja.ts  menubar_ka.ts  menubar_ko.ts  menubar_lt.ts  menubar_nb_NO.ts  menubar_nl.ts  menubar_pl.ts  menubar_pt.ts  menubar_pt_BR.ts  menubar_ru.ts  menubar_sl.ts  menubar_sv.ts  menubar_tr.ts  menubar_uk.ts  menubar_zh_Hans.ts  menubar_zh_Hant.ts
